se agrega conclusion

--- a/DL_LSTM_Forecasting.ipynb
+++ b/DL_LSTM_Forecasting.ipynb
@@ -1009,9 +1009,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa01f640-c2d1-49ca-bba4-b9b48830d6e2",
+   "metadata": {},
+   "source": [
+    "### Conclucion \n",
+    "El modelo LSTM demostró ser una buena herramienta para la predicción de series temporales complejas, capaz de modelar relaciones no lineales y dependencias de largo plazo que los métodos tradicionales no pueden capturar.\n",
+    "Aunque implica mayor complejidad computacional y necesidad de ajuste fino, su rendimiento superior justifica plenamente su uso en escenarios reales.\n",
+    "\n",
+    "En futuros trabajos, podrían explorarse modelos híbridos (LSTM + CNN o LSTM + atención), así como la incorporación de variables exógenas (humedad, precipitación, presión) para mejorar aún más la capacidad predictiva."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a22d702-36cd-4571-b75b-99e48d2526c0",
+   "id": "2d02d211-ddce-4cce-812a-549c02954a85",
    "metadata": {},
    "outputs": [],
    "source": []
